Fix profile image visibility by adjusting z-index and position in ProfilePage

--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -1,15 +1,24 @@
 .ProfileImage {
-    object-fit: cover;
-    height: 120px;
-    width: 120px;
-    margin: 4px;
-    position: relative;
-    z-index: 10;
-  }
-  
-  @media screen and (max-width: 991px) {
-    .ProfileImage {
+  object-fit: cover;
+  height: 120px;
+  width: 120px;
+  margin: 4px;
+  position: relative;
+  z-index: 10;
+}
+
+@media screen and (max-width: 991px) {
+  .ProfileImage {
       width: 250px;
       height: 250px;
-    }
   }
+}
+
+.text-lg-left {
+  position: relative;
+  z-index: 5;
+}
+
+.ProfilePage, .PostsPage {
+  overflow: visible;
+}
